All college sections added

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -131,10 +131,10 @@
         <article>
           <h3 class="display-3">Penn State Shenango</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            &quot;We are innovators and achievers driven to shape a better
+            future for ourselves and the communities around us.&quot; Penn State
+            Shenango students experience unrivaled academics, vibrant campus
+            life, and graduate in confidence with top-ranked career services.
           </p>
           <a
             href="https://shenango.psu.edu/"
@@ -166,10 +166,10 @@
         <article class="pt-3">
           <h3 class="display-3">Penn State Shenango</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            &quot;We are innovators and achievers driven to shape a better
+            future for ourselves and the communities around us.&quot; Penn State
+            Shenango students experience unrivaled academics, vibrant campus
+            life, and graduate in confidence with top-ranked career services.
           </p>
           <a
             href="https://shenango.psu.edu/"
@@ -195,10 +195,9 @@
         <article class="text-end">
           <h3 class="display-3">Grove City College</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            Grove City College equips students to pursue their unique callings
+            through a Christ-centered, academically excellent, and affordable
+            learning and living experience.
           </p>
           <a
             href="https://www.gcc.edu/"
@@ -223,10 +222,9 @@
         <article class="pt-3">
           <h3 class="display-3">Grove City College</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            Grove City College equips students to pursue their unique callings
+            through a Christ-centered, academically excellent, and affordable
+            learning and living experience.
           </p>
           <a
             href="https://www.gcc.edu/"
@@ -245,10 +243,13 @@
         <article>
           <h3 class="display-3">Thiel University</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            Founded in 1866, Thiel College is an independent liberal arts
+            college in western Pennsylvania, offering innovative undergraduate
+            and graduate programs. Shaped by its Lutheran heritage, Thiel
+            provides an accessible and inclusive learning environment and serves
+            a diverse population of students. Thiel offers robust co-curricular
+            and athletic experiences and fosters lifelong growth, learning, and
+            relationships.
           </p>
           <a
             href="https://www.thiel.edu/"
@@ -263,7 +264,7 @@
           <img
             class="border shadow-lg"
             src="../images/schools/thiel.jpg"
-            alt="Penn State Shenango"
+            alt="Thiel University"
           />
         </aside>
       </section>
@@ -280,10 +281,13 @@
         <article class="pt-3">
           <h3 class="display-3">Thiel University</h3>
           <p class="lead">
-            "We are innovators and achievers driven to shape a better future for
-            ourselves and the communities around us. Penn State Shenango
-            students experience unrivaled academics, vibrant campus life, and
-            graduate in confidence with top-ranked career services. "
+            Founded in 1866, Thiel College is an independent liberal arts
+            college in western Pennsylvania, offering innovative undergraduate
+            and graduate programs. Shaped by its Lutheran heritage, Thiel
+            provides an accessible and inclusive learning environment and serves
+            a diverse population of students. Thiel offers robust co-curricular
+            and athletic experiences and fosters lifelong growth, learning, and
+            relationships.
           </p>
           <a
             href="https://www.thiel.edu/"
@@ -297,9 +301,233 @@
       </section>
       <hr />
 
-      <!--  -->
-      <section style="height: 100rem; width: 100%"></section>
+      <!-------------------------------------------- LTI -------------------------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/laural-technical-institute.jpg"
+            alt="Laurel Technical Institute"
+          />
+        </aside>
+        <article class="text-end">
+          <h3 class="display-3">Laurel Technical Institute</h3>
+          <p class="lead">
+            Laurel Institutes is dedicated to providing career focused education
+            and professional certifications for individuals seeking employment
+            in various careers in response to the need of the regional employer
+            community.
+          </p>
+          <a
+            href="https://www.laurel.edu/lti-hermitage"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Laurel Technical Institute's Website"
+          >
+            View Trade School Site
+          </a>
+        </article>
+      </section>
+
+      <!-- LTI MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/laural-technical-institute.jpg"
+            alt="Laurel Technical Institute"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Laurel Technical Institute</h3>
+          <p class="lead">
+            Laurel Institutes is dedicated to providing career focused education
+            and professional certifications for individuals seeking employment
+            in various careers in response to the need of the regional employer
+            community.
+          </p>
+          <a
+            href="https://www.laurel.edu/lti-hermitage"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Laurel Technical Institute's Website"
+          >
+            View Trade School Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!-------------------------------- WEST MINSTER UNIVERSITY -------------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <article>
+          <h3 class="display-3">West Minster University</h3>
+          <p class="lead">
+            &quot;We are Westminster College. We&rsquo;re closer than you think,
+            nestled within the charming town of New Wilmington, just one hour
+            north of Pittsburgh. We study hard, priding ourselves in strong
+            academics, outstanding faculty, and individualized attention with
+            our 11:1 student to faculty ratio...&quot;
+          </p>
+          <a
+            href="https://www.westminster.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to West Minster University's Website"
+          >
+            View College Site
+          </a>
+        </article>
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/westminster.png"
+            alt="West Minster University"
+          />
+        </aside>
+      </section>
+
+      <!-- WEST MINSTER UNIVERSITY MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/westminster.png"
+            alt="West Minster University"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">West Minster University</h3>
+          <p class="lead">
+            &quot;We are Westminster College. We&rsquo;re closer than you think,
+            nestled within the charming town of New Wilmington, just one hour
+            north of Pittsburgh. We study hard, priding ourselves in strong
+            academics, outstanding faculty, and individualized attention with
+            our 11:1 student to faculty ratio...&quot;
+          </p>
+          <a
+            href="https://www.westminster.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to West Minster University's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!-------------------------------------------- MCCC -------------------------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/mercer-county-career-center.jpg"
+            alt="Mercer County Career Center"
+          />
+        </aside>
+        <article class="text-end">
+          <h3 class="display-3">Mercer County Career Center</h3>
+          <p class="lead">
+            Mercer County Career Centers offers career and technical training to
+            the secondary and adult student.
+          </p>
+          <a
+            href="https://www.mercerccc.org/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Mercer County Career Center's Website"
+          >
+            View Trade School Site
+          </a>
+        </article>
+      </section>
+
+      <!-- Mercer County Career Center MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/mercer-county-career-center.jpg"
+            alt="Mercer County Career Center"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Mercer County Career Center</h3>
+          <p class="lead">
+            Mercer County Career Centers offers career and technical training to
+            the secondary and adult student.
+          </p>
+          <a
+            href="https://www.mercerccc.org/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Mercer County Career Center's Website"
+          >
+            View Trade School Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!-------------------------------- BUTLER COUNTY COMMUNITY COLLEGE -------------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <article>
+          <h3 class="display-3">Butler County Community College</h3>
+          <p class="lead">
+            Butler County Community College has 35 career programs, 21 transfer
+            programs, and 25 certificates in the areas of Business, Health Care,
+            Humanities and Social Sciences and STEM (Science, Technology,
+            Engineering, and Math).
+          </p>
+          <a
+            href="https://www.bc3.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Butler County Community College's Website"
+          >
+            View College Site
+          </a>
+        </article>
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/bc3-linden-pointe.jpg"
+            alt="Butler County Community College"
+          />
+        </aside>
+      </section>
+
+      <!-- WEST MINSTER UNIVERSITY MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/bc3-linden-pointe.jpg"
+            alt="Butler County Community College"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Butler County Community College</h3>
+          <p class="lead">
+            Butler County Community College (BC3) has 35 career programs, 21
+            transfer programs, and 25 certificates in the areas of Business,
+            Health Care, Humanities and Social Sciences and STEM (Science,
+            Technology, Engineering, and Math).
+          </p>
+          <a
+            href="https://www.bc3.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Butler County Community College's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
     </main>
+    <!-- FOOTER -->
+
     <script src="../js/bootstrap.bundle.js" async defer></script>
 
     <script src="" async defer></script>
