Add testing button for mobile width determinitation

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             Search
           </button>
         </form> -->
+          <button id="alert-width">FOR TESTING</button>
         </div>
       </div>
     </nav>
