--- a/pages/learn.html
+++ b/pages/learn.html
@@ -67,7 +67,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -93,7 +93,7 @@
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./learn.html">Learn</a>
+              <a class="nav-link active" href="./learn.html">Learn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/play.html">Play</a>
