Restyled footer nav on all site versions

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
         <div class="divider-div d-none d-xl-block"></div>
         <div class="d-none d-xl-block">
-          <p class="lead fw-bold text-light text-center">
+          <p class="lead fw-bold text-light text-start">
             Helping Those In Mercer County PA Find Jobs And Build Meaningful
             Lives
           </p>
@@ -339,17 +339,17 @@
               <ul class="list-unstyled text-light">
                 <li>
                   <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
+                    >Live in Mercer County <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="./pages/learn.html"
-                    >Learn <span>&gt;</span></a
+                    >Schools and Education <span>&gt;</span></a
                   >
                 </li>
                 <li>
                   <a class="footer-list-item" href="./pages/work.html"
-                    >Work <span>&gt;</span></a
+                    >Jobs in Mercer County <span>&gt;</span></a
                   >
                 </li>
                 <li>
@@ -376,40 +376,6 @@
                     class="footer-list-item"
                     href="./pages/work.html#job-search-start-form"
                     >Get Help Finding Work <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-              </ul>
-            </nav>
-            <nav>
-              <ul class="list-unstyled text-light">
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
                   >
                 </li>
                 <li>
@@ -491,17 +457,17 @@
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Jobs Page <span>&gt;</span></a
+                    >Jobs in Mercer County <span>&gt;</span></a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
+                    >Live in Mercer County<span>&gt;</span></a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="./pages/learn.html"
-                    >Learn <span>&gt;</span></a
+                    >Schools and Education <span>&gt;</span></a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
