Index form edited and nav active class border-bottom edited

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             >The Penn-Northwest Homegrown Initiative
           </h2>
           <hr />
-          <form>
+          <form id="enter-email-for-updates">
             <div id="footer-email-input" class="input-group">
               <!-- <label for="exampleInputEmail1" class="form-label"
                 >Enter Your Email To Join Our Mailing List!</label
@@ -310,13 +310,13 @@
               <input
                 type="email"
                 class="form-control bg-light"
-                id="exampleInputEmail1"
+                id="email-input"
                 placeholder="Enter Your Email For Updates!"
                 aria-describedby="emailHelp"
               />
               <button
                 class="btn btn-outline-secondary"
-                type="button"
+                type="submit"
                 id="button-addon1"
               >
                 SEND
@@ -329,7 +329,7 @@
         </div>
         <div class="divider-div d-none d-xl-block"></div>
         <div class="d-none d-xl-block">
-          <p class="lead fw-bold text-light text-start">
+          <p id="footer-tag-message" class="lead fw-bold text-light text-start">
             Helping Those In Mercer County PA Find Jobs And Build Meaningful
             Lives
           </p>
