Remove horizontal rule on mobile learn.html

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -179,7 +179,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!--------------------------- GROVE CITY COLLEGE --------------------------->
       <section class="d-none d-lg-flex section-margin-top">
@@ -233,7 +233,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!-------------------------------- THIEL UNIVERSITY -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
@@ -295,7 +295,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!-------------------------------------------- LTI -------------------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
@@ -351,7 +351,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!-------------------------------- WEST MINSTER UNIVERSITY -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
@@ -409,7 +409,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!-------------------------------------------- MCCC -------------------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
@@ -461,7 +461,7 @@
           </a>
         </article>
       </section>
-      <hr />
+      <hr class="d-none d-lg-block" />
 
       <!-------------------------------- BUTLER COUNTY COMMUNITY COLLEGE -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
