Add live.html <head> data

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                   <a
                     class="dropdown-item"
                     href="./pages/work.html#job-search-start-form"
-                    >Find a Job</a
+                    >Get Help Finding Work</a
                   >
                 </li>
 
                 <li>
                   <a class="dropdown-item" href="./pages/work.html"
-                    >View Work Page</a
+                    >Jobs in Mercer County</a
                   >
                 </li>
               </ul>
