--- a/pages/work.html
+++ b/pages/work.html
@@ -82,11 +82,11 @@
               <ul class="dropdown-menu">
                 <li>
                   <a class="dropdown-item" href="#job-search-start-form"
-                    >Find a Job</a
+                    >Get Help Finding Work</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">View Work Page</a>
+                  <a class="dropdown-item" href="#">Jobs in Mercer County</a>
                 </li>
               </ul>
             </li>
