--- a/pages/learn.html
+++ b/pages/learn.html
@@ -80,11 +80,13 @@
                   <a
                     class="dropdown-item"
                     href="./work.html#job-search-start-form"
-                    >Find a Job</a
+                    >Get Help Finding Work</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./work.html">View Work Page</a>
+                  <a class="dropdown-item" href="./work.html"
+                    >Jobs in Mercer County</a
+                  >
                 </li>
               </ul>
             </li>
