--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       content="The Penn-Northwest Company's Homegrown Initiative Site: Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="./images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <!-- Google Fonts -->
