--- a/pages/learn.html
+++ b/pages/learn.html
@@ -6,6 +6,7 @@
     <title>Learn - Go Mercer Country</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <!-- Google Fonts -->
