--- a/pages/live.html
+++ b/pages/live.html
@@ -4,9 +4,10 @@
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <title>Learn - Go Mercer Country</title>
+      <title>Live - Go Mercer Country</title>
       <meta name="description" content="" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
       <!-- Bootstrap Files -->
       <link rel="stylesheet" href="../css/bootstrap.css" />
       <!-- Google Fonts -->
