Fixed Aria current attribute in header Nav

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -93,10 +93,12 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Live</a>
+              <a class="nav-link" href="./live.html">Live</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./learn.html">Learn</a>
+              <a class="nav-link active" aria-current="page" href="./learn.html"
+                >Learn</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/play.html">Play</a>
