--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     <!------------------------------------------------------ START NAV ------------------------------------------------------>
     <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div id="nav-div" class="container-fluid">
-        <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
+        <a
+          class="navbar-brand fs-3 d-none d-lg-block"
+          href="./index.html"
+          aria-current="page"
+        >
           <img
             src="./images/Homegrown_crop_1.jpg"
             alt="Logo"
@@ -100,7 +104,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Live</a>
+              <a class="nav-link" href="./pages/live.html">Live</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/learn.html">Learn</a>
@@ -339,7 +343,7 @@
             <nav>
               <ul class="list-unstyled text-light">
                 <li>
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/live.html"
                     >Live in Mercer County <span>&gt;</span></a
                   >
                 </li>
@@ -462,7 +466,7 @@
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/live.html"
                     >Live in Mercer County<span>&gt;</span></a
                   >
                 </li>
