--- a/pages/work.html
+++ b/pages/work.html
@@ -77,6 +77,7 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
+                aria-current="page"
               >
                 Work
               </a>
@@ -93,7 +94,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Live</a>
+              <a class="nav-link" href="./live.html">Live</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./learn.html">Learn</a>
