Added essential <meta> tags for facebook and twitter.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,50 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>
-      Go Mercer Country - A Penn-Northwest Homegrown Initiative Site
-    </title>
+    <title>Go Mercer Country - By Penn-Northwest's Homegrown Initiative</title>
     <meta
       name="description"
-      content="The Penn-Northwest Company's Homegrown Initiative Site: Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!---------------------------------------------- Facebook Meta Tags ---------------------------------------------->
+    <meta
+      property="og:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      property="og:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
+
+    <!---------------------------------------------- Twitter Meta Tags ---------------------------------------------->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      name="twitter:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      name="twitter:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
+
     <link rel="shortcut icon" href="./images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
