--- a/pages/learn.html
+++ b/pages/learn.html
@@ -4,7 +4,46 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Learn - Go Mercer Country</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+
+    <!--------------------------------------- Facebook Meta Tags --------------------------------------->
+    <meta
+      property="og:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      property="og:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
+
+    <!--------------------------------------- Twitter Meta Tags --------------------------------------->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      name="twitter:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      name="twitter:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
@@ -618,7 +657,5 @@
     </footer>
 
     <script src="../js/bootstrap.bundle.js" async defer></script>
-
-    <script src="" async defer></script>
   </body>
 </html>
