--- a/pages/live.html
+++ b/pages/live.html
@@ -1,32 +1,71 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <head>
-      <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <title>Live - Go Mercer Country</title>
-      <meta name="description" content="" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
-      <!-- Bootstrap Files -->
-      <link rel="stylesheet" href="../css/bootstrap.css" />
-      <!-- Google Fonts -->
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <!-- Quicksand Font -->
-      <link
-        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet"
-      />
-      <!-- 'Quattrocento Sans' Font Link -->
-      <link
-        href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet"
-      />
-      <link rel="stylesheet" href="../css/styles/live.css" />
-    </head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Live - Go Mercer Country</title>
+    <meta
+      name="description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+
+    <!---------------------------------------- Facebook Meta Tags ---------------------------------------->
+    <meta
+      property="og:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      property="og:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
+
+    <!---------------------------------------- Twitter Meta Tags ---------------------------------------->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      name="twitter:title"
+      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+    />
+    <meta
+      name="twitter:description"
+      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
+    <!-- Bootstrap Files -->
+    <link rel="stylesheet" href="../css/bootstrap.css" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Quicksand Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- 'Quattrocento Sans' Font Link -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/styles/live.css" />
   </head>
+
   <body>
+    <script src="../js/bootstrap.bundle.js" async defer></script>
     <!-- <script src="" async defer></script> -->
   </body>
 </html>
