Additional <meta> tags for facebook and twitter sharing

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -23,6 +23,8 @@
       property="og:description"
       content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
     />
+    <meta property="og:site_name" content="Go Mercer County" />
+
     <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
 
     <!--------------------------------------- Twitter Meta Tags --------------------------------------->
@@ -30,6 +32,10 @@
     <meta
       property="twitter:domain"
       content="pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="The Homepage for the Go Mercer County Site"
     />
     <meta
       property="twitter:url"
