--- a/pages/live.html
+++ b/pages/live.html
@@ -19,6 +19,7 @@
       property="og:title"
       content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
     />
+    <meta property="og:site_name" content="Go Mercer County" />
     <meta
       property="og:description"
       content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
@@ -30,6 +31,10 @@
     <meta
       property="twitter:domain"
       content="pndc-homegrown-initiative-test-server.netlify.app"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="The Homepage for the Go Mercer County Site"
     />
     <meta
       property="twitter:url"
