Added initial test script for Cost of Living calculator on Live page

--- a/pages/live.html
+++ b/pages/live.html
@@ -70,7 +70,21 @@
   </head>
 
   <body>
+    <!-- KEEP THIS FORM!!!!!!!!!!!!!! -->
+    <!-- This is the basis of the cost of living calculator commandeering form -->
+    <!-- <form>
+      <label for="current">Current City</label>
+      <input class="input" type="text" name="current" id="current" />
+
+      <label for="future">Future City</label>
+      <input class="input" type="text" name="future" id="future" />
+
+      <label for="salary">Salary</label>
+      <input class="input" type="number" name="salary" id="salary" />
+      <button type="submit">Click me</button>
+    </form> -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
-    <!-- <script src="" async defer></script> -->
+
+    <script src="../js/live-scripts.js"></script>
   </body>
 </html>
