Add link to live page in section 3 of index.html

--- a/index.html
+++ b/index.html
@@ -321,7 +321,11 @@
                 et.
               </p>
               <div class="live-scrollIn scrollIn">
-                <a id="live-button" class="btn btn-background-slide">
+                <a
+                  id="live-button"
+                  class="btn btn-background-slide"
+                  href="./pages/live.html"
+                >
                   Click To Learn More
                   <i class="gg-arrow-right d-inline-block"></i>
                   <div
