Fixed all pages header alignment issues on screen sizes under 992px

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -169,7 +169,7 @@
 
       <div class="container">
         <p class="lead display-6">
-          Mercer County is Home To Many Prestigious Colleges and Trade Schools
+          Mercer County is home to many prestigious Colleges and Trade Schools
         </p>
       </div>
     </header>
