--- a/pages/live.html
+++ b/pages/live.html
@@ -70,6 +70,109 @@
   </head>
 
   <body>
+    <!----------------------------- START NAV ----------------------------->
+    <nav
+      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
+    >
+      <div id="nav-div" class="container-fluid">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="../index.html">
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Discover Mercer County</a
+        >
+        <a
+          id="goMercerCounty"
+          class="navbar-brand fs-3 d-lg-none"
+          href="../index.html"
+        >
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Go Mercer County</a
+        >
+        <button
+          id="mobile-nav-button"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Work
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./work.html#job-search-start-form"
+                    >Get Help Finding Work</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./work.html"
+                    >Jobs in Mercer County</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" href="./live.html">Live</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="./learn.html"
+                >Learn</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/play.html">Play</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/about.html">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!------------------------------------ END NAV ------------------------------------>
+
+    <header class="shadow-lg text-light">
+      <div class="text-center container d-none d-sm-block">
+        <h1 class="display-1">Live</h1>
+      </div>
+      <div class="container text-start d-block d-sm-none">
+        <h1 class="display-1">Live</h1>
+      </div>
+
+      <div class="container">
+        <p class="lead display-6">
+          Where life is quiet and the bills are inexpensive
+        </p>
+      </div>
+    </header>
+
     <!-- KEEP THIS FORM!!!!!!!!!!!!!! -->
     <!-- This is the basis of the cost of living calculator commandeering form -->
     <!-- <form>
