Live page initial styling concept worked out

--- a/pages/live.html
+++ b/pages/live.html
@@ -173,6 +173,16 @@
       </div>
     </header>
 
+    <main>
+      <section class="shadow-lg container rounded">
+        <h2 id="test" class="display-1 text-center pt-4">See For Yourself</h2>
+        <div>
+          <aside></aside>
+          <aside></aside>
+        </div>
+      </section>
+    </main>
+
     <!-- KEEP THIS FORM!!!!!!!!!!!!!! -->
     <!-- This is the basis of the cost of living calculator commandeering form -->
     <!-- <form>
