--- a/pages/live.html
+++ b/pages/live.html
@@ -189,89 +189,119 @@
             <!-- <h3 class="display-5 text-center py-3">
               Cost of Living Calculator
             </h3> -->
+            <div class="blur-box">
+              <h3
+                class="display-5 text-center text-dark py-3 d-none d-xl-block"
+              >
+                Cost of Living Calculator
+              </h3>
+              <h3
+                class="display-6 text-center py-3 d-none d-lg-block d-xl-none"
+              >
+                Cost of Living Calculator
+              </h3>
+              <h3 class="display-6 text-start pt-3 d-lg-none">
+                Cost of Living Calculator
+              </h3>
+              <div id="form-box" class="container">
+                <form name="job-search-contact-form" class="row g-2 py-5">
+                  <div class="col-xl-8">
+                    <label for="firstName" class="form-label"
+                      >Your Current City</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="currentCity"
+                      name="currentCity"
+                      placeholder='Eg. "Pittsburgh"'
+                      required
+                    />
+                  </div>
 
-            <h3 class="display-5 text-center py-3 d-none d-xl-block">
-              Cost of Living Calculator
-            </h3>
-            <h3 class="display-6 text-center py-3 d-none d-lg-block d-xl-none">
-              Cost of Living Calculator
-            </h3>
-            <h3 class="display-6 text-start pt-3 d-lg-none">
-              Cost of Living Calculator
-            </h3>
-            <div id="form-box" class="container">
-              <form name="job-search-contact-form" class="row g-2 py-5">
-                <div class="col-xl-8">
-                  <label for="firstName" class="form-label"
-                    >Your Current City</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="currentCity"
-                    name="currentCity"
-                    placeholder='Eg. "Pittsburgh"'
-                    required
-                  />
-                </div>
+                  <div id="state-select-div" class="col-xl-4">
+                    <select class="form-select" aria-label="Select Your State">
+                      <option selected>State</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
 
-                <div id="state-select-div" class="col-xl-4">
-                  <select class="form-select" aria-label="Select Your State">
-                    <option selected>State</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
+                  <div class="col-12 py-3">
+                    <label for="mercerCountyCity" class="form-label"
+                      >Which town are you considering?</label
+                    >
+                    <!-- <input
+                      type="text"
+                      class="form-control"
+                      id="mercerCountyCity"
+                      name="mercerCountyCity"
+                      placeholder="Smith"
+                      required
+                    /> -->
+                    <select
+                      id="mercerCountyCity"
+                      name="mercerCountyCity"
+                      class="form-select"
+                      aria-label="Which town are you considering?"
+                    >
+                      <option selected>Hermitage</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="col-12 pb-3">
+                    <label for="email" class="form-label">Current Salary</label>
+                    <input
+                      type="number"
+                      class="form-control"
+                      id="salary"
+                      name="salary"
+                      placeholder="Eg. $45,000"
+                      required
+                    />
+                  </div>
 
-                <div class="col-12">
-                  <label for="lastName" class="form-label">Last Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="lastName"
-                    name="last-name"
-                    placeholder="Smith"
-                    required
-                  />
-                </div>
-                <div class="col-12">
-                  <label for="email" class="form-label">Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    name="email"
-                    placeholder="name@site.com"
-                    required
-                  />
-                </div>
-
-                <div class="col-12">
-                  <button
-                    id="form-submit-button"
-                    type="submit"
-                    class="btn btn-primary btn-lg"
-                  >
-                    Submit
-                  </button>
-                </div>
-              </form>
+                  <div class="col-12">
+                    <button
+                      id="form-submit-button"
+                      type="submit"
+                      class="btn btn-primary btn-lg"
+                    >
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
           </aside>
 
           <!-- NEIGHBORHOOD QUIZ -->
           <aside class="shadow border rounded">
-            <h3 class="display-5 text-center py-3 d-none d-xl-block">
-              Take the Neighborhood Quiz
-            </h3>
-            <h3 class="display-6 text-center py-3 d-none d-lg-block d-xl-none">
-              Take the Neighborhood Quiz
-            </h3>
-            <h3 class="display-6 text-start pt-3 d-lg-none">
-              Take the Neighborhood Quiz
-            </h3>
-            <div class="container"></div>
+            <div id="blue-box-two" class="blur-box">
+              <h3 class="display-5 text-center py-3 d-none d-xl-block">
+                Take the Neighborhood Quiz
+              </h3>
+              <h3
+                class="display-6 text-center py-3 d-none d-lg-block d-xl-none"
+              >
+                Take the Neighborhood Quiz
+              </h3>
+              <h3 class="display-6 text-start pt-3 d-lg-none">
+                Take the Neighborhood Quiz
+              </h3>
+              <button
+                id="neighborhood-quiz-button"
+                class="btn btn-primary btn-lg"
+              >
+                Click Me
+              </button>
+              <div id="neighborhood-quiz" class="container">
+                <!-- <h1 class="display-1 text-center">Test</h1> -->
+              </div>
+            </div>
           </aside>
         </div>
       </section>
